[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
futures = "0.3.28"
getrandom = "0.2.10"
iroh-net = { git = "https://github.com/n0-computer/iroh" }
log = "0.4.20"
pkarr = { git = "https://github.com/dvc94ch/pkarr", branch = "rm-openssl" }
quinn = "0.10.2"
serde = "1.0.188"
simple-mdns = { git = "https://github.com/balliegojr/simple-dns", features = ["async-tokio"] }
tokio = "1.32.0"
ttl_cache = "0.5.1"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.20"
