[package]
name = "peernet"
version = "0.4.2"
edition = "2021"
description = "easy and reliable p2p networking"
repository = "https://github.com/dvc94ch/peernet"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bincode = "1.3.3"
futures = "0.3.29"
getrandom = "0.2.11"
iroh = "0.34.0"
serde = "1.0.193"
tokio = "1.34.0"
tracing = "0.1.40"

[dev-dependencies]
env_logger = "0.11.3"
